--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "jest": "^27.5.1",
+    "sequelize-cli": "^6.6.2",
     "supertest": "^6.2.2",
     "ts-node": "^10.6.0",
     "typescript": "^4.9.5"
@@ -15,7 +16,8 @@
   "scripts": {
     "test": "npm run tsc -- --noEmit && jest",
     "tsc": "tsc",
-    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node ./src/modules/infrastructure/api/server.ts\""
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node ./src/modules/infrastructure/api/server.ts\"",
+    "migrate": "node -r ts-node/register/transpile-only ./src/modules/infrastructure/db/config/migrator-cli.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
